// Vitest Snapshot v1

exports[`PresetUtilitySans > default configuration > renders correctly 1`] = `
<p
  class="cdr-text cdr-utility-sans"
  style="--cdr-utility-sans-font-size: var(--cdr-type-scale-1); --cdr-utility-sans-line-height: calc(var(--cdr-type-scale-1) * var(--cdr-utility-sans-line-height-ratio)); --cdr-utility-sans-font-weight: 400;"
>
  <!-- @slot CdrText content -->
  
  
  paragraph
  
  
</p>
`;

exports[`PresetUtilitySans > passing a scale > renders correctly 1`] = `
<p
  class="cdr-text cdr-utility-sans"
  style="--cdr-utility-sans-font-size: var(--cdr-type-scale--1); --cdr-utility-sans-line-height: calc(var(--cdr-type-scale--1) * var(--cdr-utility-sans-line-height-ratio)); --cdr-utility-sans-font-weight: 400;"
>
  <!-- @slot CdrText content -->
  
  
  paragraph
  
  
</p>
`;

exports[`PresetUtilitySans > setting to strong variant > renders correctly 1`] = `
<p
  class="cdr-text cdr-utility-sans"
  style="--cdr-utility-sans-font-size: var(--cdr-type-scale-1); --cdr-utility-sans-line-height: calc(var(--cdr-type-scale-1) * var(--cdr-utility-sans-line-height-ratio)); --cdr-utility-sans-font-weight: 600;"
>
  <!-- @slot CdrText content -->
  
  
  paragraph
  
  
</p>
`;
